Change all height to min-height and fixed overlapping issue

--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body {
     background-color: hsl(30, 54%, 90%);
-    height: 100%;
 }
 
 .recipe-container {
@@ -13,12 +12,12 @@ body {
     background-color: #ffffff;
     padding: 40px;
     border-radius: 24px;
-    height: 1700px;
+    min-height: 1956px;
 }
 
 img {
     width: 656px;
-    height: 300px;
+    min-height: 300px;
     border-radius: 12px;
 }
 
@@ -29,7 +28,7 @@ img {
 
 .recipe-title {
     width: 656px;
-    height: 40px;
+    min-height: 40px;
     font-size: 40px;
     line-height: 100%;
     font-family: "Young Serif";
@@ -39,7 +38,7 @@ img {
 
 .recipe-description {
     width: 656px;
-    height: 48px;
+    min-height: 48px;
     font-family: "Outfit";
     font-weight: normal;
     font-size: 16px;
@@ -48,7 +47,7 @@ img {
 }
 
 .recipe-prep-time {
-    height: 172px;
+    min-height: 172px;
     padding: 24px;
     line-height: 16px;
     background-color: hsl(330, 100%, 98%);
@@ -57,7 +56,7 @@ img {
 
 .recipe-preperation-title {
     color: hsl(332, 51%, 32%);
-    height: 20px;
+    min-height: 20px;
     width: 608px;
     font-family: "Outfit";
     font-weight: bold;
@@ -66,12 +65,12 @@ img {
 }
 
 .unordered-prep-list {
-    height: 88px;
+    min-height: 88px;
     line-height: 8px;
 }
 
 .unordered-prep-item {
-    height: 24px;
+    min-height: 24px;
     padding-left: 8px;
 }
 
@@ -80,7 +79,7 @@ strong {
 }
 
 .recipe-ingredients {
-    height: 204px;
+    min-height: 204px;
     line-height: 24px;
 }
 
@@ -92,12 +91,12 @@ strong {
 }
 
 .recipe-ingredient-list {
-    height: 152px;
+    min-height: 152px;
     line-height: 8px;
 }
 
 .recipe-ingredient-list-items {
-    height: 24px;
+    min-height: 24px;
     padding-left: 8px;
     line-height: 16px;
     color: hsl(30, 10%, 34%);
@@ -108,12 +107,12 @@ strong {
 }
 
 .recipe-instructions {
-    height: 332px;
+    min-height: 332px;
     line-height: 24px;
 }
 
 .recipe-instructions-title {
-    height: 28px;
+    min-height: 28px;
     font-family: "Young Serif";
     font-weight: normal;
     font-size: 28px;
@@ -121,14 +120,19 @@ strong {
 }
 
 .recipe-instructions-list {
-    height: 280px;
+    min-height: 280px;
     line-height: 8px;
 }
 
 .recipe-instructions-list-item {
     width: 616px;
-    height: 48px;
+    min-height: 48px;
     padding: 8px;
     line-height: 16px;
     color: hsl(30, 10%, 34%);
+}
+
+.recipe-nutrition {
+    min-height: 268px;
+    line-height: 24px;
 }
